--- a/pages/index.css
+++ b/pages/index.css
@@ -33,3 +33,4 @@
 @import "../blocks/footer/__list/footer__list.css";
 @import "../blocks/footer/__link/footer__link.css";
 @import "../blocks/footer/__copyright/footer__copyright.css";
+@import "../blocks/main/main.css";
