--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,7 @@
 .header {
-    margin: 28px 48px 0;
+    margin: 28px auto 0;
     display: flex;
+    max-width: 1184px;
     justify-content: space-between;
     align-items: end;
 }
