--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,25 +1,25 @@
 .lead__image {
-    width: 984px;
+    max-width: 984px;
     height: 615px;  
 }
 
 @media (max-width: 1279px) {
     .lead__image {
-        width: 928px;
+        max-width: 928px;
         height: 580px;  
     }
 }
 
 @media (max-width: 1023px) {
     .lead__image {
-        width: 768px;
+        max-width: 750px;
         height: 480px;  
     }
 }
 
 @media (max-width: 767px) {
     .lead__image {
-        width: 320px;
+        max-width: 320px;
         height: 200px;  
     }
 }
