--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,17 +1,15 @@
 .cover__link {
     position: relative;
     max-width: 1184px;
-    height: 740px;
+    min-height: 740px;
     margin: 0 auto 92px;
     background-image: url("../../../images/cover-trains.jpg");
     background-size: cover;
-
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     z-index: 1;
-
     text-decoration: none;
     color: #fff;
 }
@@ -36,14 +34,14 @@
 @media (max-width: 1279px) {
     .cover__link {
         max-width: 1024px;
-        height: 640px;
+        min-height: 640px;
     }
 }
 
 @media (max-width: 1023px) {
     .cover__link {
         max-width: 768px;
-        height: 480px;
+        min-height: 480px;
         margin-bottom: 88px;
     }
 }
@@ -51,7 +49,7 @@
 @media (max-width: 767px) {
     .cover__link {
         max-width: 320px;
-        height: 200px;
+        min-height: 200px;
         margin-bottom: 64px;
     }
 }
