--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,8 +1,13 @@
 .footer {
-    max-width: 1184px;
     margin: 0 auto 24px;
     display: flex;
     justify-content: space-between;
+}
+
+@media (max-width: 1279px) {
+    .footer {
+        max-width: 928px;
+    }
 }
 
 @media (max-width: 1023px) {
