--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,14 +1,19 @@
 .header {
     margin: 28px auto 0;
     display: flex;
-    max-width: 1184px;
     justify-content: space-between;
     align-items: end;
 }
 
+@media (max-width: 1279px) {
+    .header {
+        max-width: 928px;
+    }
+}
+
 @media (max-width: 767px) {
     .header {
-        margin: 16px 16px 0;
+        margin: 16px auto 0;
     }
 }
 
