--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,14 +3,24 @@
     margin: 0 auto 92px;
 }
 
+@media (max-width: 1279px) {
+    .intro {
+        max-width: 928px;
+    }
+}
+
 @media (max-width: 1023px) {
     .intro {
         margin-bottom: 88px;
+        margin-left: 24px;
+        margin-right: 24px;
     }
 }
 
 @media (max-width: 767px) {
     .intro {
+        margin-left: 16px;
+        margin-right: 16px;
         margin-bottom: 64px;
     }
 }
