--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,8 +1,14 @@
 .photo-grid {
-    margin: 0 0 92px;
+    margin: 0 auto 92px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
     gap: 16px;
+}
+
+@media (max-width: 1279px) {
+    .photo-grid {
+        max-width: 928px;
+    }
 }
 
 @media (max-width: 1023px) {
