--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -1,13 +1,15 @@
 .places__paragraph {
     margin: 0 0 26px;
-    max-width: 484px;
     font-size: 18px;
     line-height: 163%;
 }
 
+.places__paragraph:last-child {
+    margin-bottom: 0;
+}
+
 @media (max-width: 1279px) {
     .places__paragraph {
-        max-width: 456px;
         margin-bottom: 27px;
     }
 }
@@ -15,14 +17,12 @@
 @media (max-width: 1023px) {
     .places__paragraph {
         margin-bottom: 25px;
-        max-width: 352px;
         font-size: 16px;
     }
 }
 
 @media (max-width: 767px) {
     .places__paragraph {
-        max-width: 288px;
         margin: 0 16px 25px;
     }
 }
