--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,10 +1,11 @@
 .places {
-    margin: 0 148px 92px;
+    margin: 0 102px 92px;
 }
 
 @media (max-width: 1279px) {
     .places {
-        margin: 0 48px 92px;
+        margin: 0 auto 92px;
+        max-width: 928px;
     }
 }
 
