--- a/pages/index.css
+++ b/pages/index.css
@@ -1,15 +1,18 @@
 @import "../vendor/normalize.css";
 @import "../fonts/fonts.css";
 @import "../blocks/page/page.css";
+@import "../blocks/page/__wrapper/page__wrapper.css";
 @import "../blocks/header/header.css";
 @import "../blocks/header/__logo/header__logo.css";
 @import "../blocks/header/__lang/header__lang.css";
 @import "../blocks/header/__lang-link/header__lang-link.css";
+@import "../blocks/header/__lang-link/_underline/header__lang-link_underline.css";
 @import "../blocks/lead/lead.css";
 @import "../blocks/lead/__title/lead__title.css";
 @import "../blocks/lead/__subtitle/lead__subtitle.css";
 @import "../blocks/lead/__image/lead__image.css";
 @import "../blocks/lead/__caption/lead__caption.css";
+@import "../blocks/lead/__wrapper/lead__wrapper.css";
 @import "../blocks/intro/intro.css";
 @import "../blocks/intro/__title/intro__title.css";
 @import "../blocks/intro/__text/intro__text.css";
@@ -22,6 +25,7 @@
 @import "../blocks/places/__item/places__item.css";
 @import "../blocks/places/__image/places__image.css";
 @import "../blocks/places/__link/places__link.css";
+@import "../blocks/places/__text/places__text.css";
 @import "../blocks/places/__paragraph/places__paragraph.css";
 @import "../blocks/places/__title/places__title.css";
 @import "../blocks/places/__url-heading/places__url-heading.css";
