--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -11,9 +11,15 @@
     }
 }
 
+@media (max-width: 1023px) {
+    .header {
+        margin: 28px 24px 0;
+    }
+}
+
 @media (max-width: 767px) {
     .header {
-        margin: 16px auto 0;
+        margin: 16px 16px 0;
     }
 }
 
